--- a/UI/Consultas/cProyectos.xaml
+++ b/UI/Consultas/cProyectos.xaml
@@ -50,11 +50,11 @@
             <StackPanel HorizontalAlignment="Left" Width="500" >
                 <DataGrid x:Name="DatosDataGrid" Height="250" IsReadOnly="True" AutoGenerateColumns="False" AlternatingRowBackground="Gainsboro" TextBlock.TextAlignment="Center" Margin="0,20,0,0">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Proyecto Id"/>
-                        <DataGridTextColumn Header="Descripcion" />
-                        <DataGridTextColumn Header="Tiempo Total" />
-                        <DataGridTextColumn Header="Detalle" />
-                        <DataGridTextColumn Header="Fecha"/>
+                        <DataGridTextColumn Header="Proyecto Id" Binding="{Binding ProyectoId}"/>
+                        <DataGridTextColumn Header="Descripcion" Binding="{Binding Descripcion}"/>
+                        <DataGridTextColumn Header="Tiempo Total" Binding="{Binding TiempoTotal}"/>
+                        <DataGridTextColumn Header="Detalle" Binding="{Binding Detalle}"/>
+                        <DataGridTextColumn Header="Fecha" Binding="{Binding Fecha}"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </StackPanel>
